Touch event update

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         }
     </style>
     <script src="three.min.js"></script>
+    <script src="hammer.min.js"></script>
     <title>dino3D</title>
 </head>
 <body>
