--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
     <script src="three.min.js"></script>
     <script src="hammer.min.js"></script>
-    <title>dino3D</title>
+    <title></title>
 </head>
 <body>
     <div id="score"></div>
